Person's room description is now shown

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <hr>
 
       <span ng-show="personName.length">
-      <pre>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-show="personDescription.length">The description is "{{personDescription}}".</span>
+      <pre>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-show="personRoomDescription">"{{personRoomDescription}}".</span> <span ng-show="personDescription.length">The description is "{{personDescription}}".</span>
       </pre>
       </span>
 
