--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html ng-app="my-app">
+<html ng-app="my-app" lang="en">
   <head>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.8/angular.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
@@ -8,9 +9,11 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
 
       <form role="room">
       <div class="form-group">
@@ -79,8 +82,8 @@
       <hr>
 
       <span ng-show="personName.length">
-      <pre>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-show="personRoomDescription">"{{personRoomDescription}}".</span> <span ng-show="personDescription.length">The description is "{{personDescription}}".</span>
-      </pre>
+      <kbd>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-show="personRoomDescription">"{{personRoomDescription}}".</span> <span ng-show="personDescription.length">The description is "{{personDescription}}".</span>
+      </kbd>
       </span>
 
       <span ng-show="personName">
