Fixed "You yawning." bug

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <h3>Unknown location</h3>
 
       <p>> {{actionCommand}}</p>
-      <p>You {{actionName}}.</p>
+      <p>You {{actionCommand}}.</p>
 
       </span>
 
