--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="my-app" lang="en">
   <head>
-
+    <title>Inform 7 thing creator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.8/angular.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
