--- a/index.html
+++ b/index.html
@@ -2,142 +2,151 @@
 <html ng-app="my-app" lang="en">
   <head>
     <title>Inform 7 thing creator</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.5/angular.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script> -->
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="container-fluid">
 
-      <form role="room">
-      <div class="form-group">
-      <h2>A room</h2>
+      <h1>An Inform7 thing creator</h1>
 
-      <div class="form-group">
-        <label for="roomName">Name of the room:</label>
-        <input class="form-control" type="text" ng-model="roomName" placeholder="Enter a room name here">
+      <!-- Nav tabs -->
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="active"><a href="#rooms" role="tab" data-toggle="tab">Rooms</a></li>
+        <li><a href="#people" role="tab" data-toggle="tab">People</a></li>
+        <li><a href="#actions" role="tab" data-toggle="tab">Actions</a></li>
+      </ul>
+
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <div class="tab-pane active" id="rooms">
+
+          <form role="room">
+
+            <div class="form-group">
+              <label for="roomName">Name of the room:</label>
+              <input class="form-control" type="text" ng-model="roomName" placeholder="Enter a room name here">
+            </div>
+
+            <div class="form-group">
+              <label>Description:</label>
+              <input class="form-control" type="text" ng-model="roomDescription" placeholder="Enter a room description here">
+              <p class="help-block">Text that appears when a player enters a room, for example "Your Great Auntie Vera's garden is a typical English garden with many sights, sounds, and smells. An old fountain is the centre piece of this garden."</p>
+            </div>
+
+            <hr>
+
+            <span ng-show="roomName">
+
+              <kbd>{{roomName}} is a room. <span ng-show="roomDescription.length">"{{roomDescription | punctuate}}"</span></kbd>
+            </span>
+
+            <span ng-show="roomName">
+              <h3>{{roomName}}</h3>
+              <span ng-show="roomDescription">
+                <p>{{roomDescription | punctuate}}</p>
+              </span>
+              <p>> </p>
+            </span>
+          </form>
+        </div>
+
+        <div class="tab-pane" id="people">
+          <form role="person">
+
+            <div class="form-group">
+              <label>Name:</label>
+              <input class="form-control" type="text" ng-model="personName" placeholder="Enter the name of the person">
+            </div>
+
+            <div class="form-group">
+              <label class="checkbox-inline">
+                <input type="radio" ng-model="personSex" value="male"> Male
+              </label>
+              <label class="radio-inline">
+                <input type="radio" ng-model="personSex" value="female"> Female
+              </label>
+            </div>
+
+            <div class="form-group">
+              <label>Description:</label>
+              <input class="form-control" type="text" ng-model="personDescription" placeholder="Enter the description here">
+              <p class="help-block">Text that appears when the player looks at a person, for example "She is the sister of your grandmother and demands much respect from you."</p>
+            </div>
+
+            <div class="form-group">
+              <label>Room description:</label>
+              <input class="form-control" type="text" ng-model="personRoomDescription" placeholder="Enter the room description here">
+              <p class="help-block">Text that appears when the player enters the room, for example "Darcy is standing here with a stern look on his face."</p>
+            </div>
+
+            <div class="form-group">
+              <label for="personLocation">Location:</label>
+              <input class="form-control" type="text" ng-model="personLocation" placeholder="Enter the location of the person">
+            </div>
+
+            <hr>
+
+            <span ng-show="personName.length">
+              <kbd>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-hide="personLocation">{{personName}} is here.</span> <span ng-show="personRoomDescription">"{{personRoomDescription | punctuate}}"</span> <span ng-show="personDescription.length">The description is "{{personDescription | punctuate}}"</span>
+              </kbd>
+            </span>
+
+            <span ng-show="personName">
+              <h3><span ng-show="personLocation">{{personLocation}}</span><span ng-hide="personLocation">Unknown location</span></h3>
+              <span ng-show="personRoomDescription">
+                <p>{{personRoomDescription | punctuate}}</p>
+              </span>
+              <!-- <span ng-hide="personRoomDescription">
+                <p>An unknown location with an unknown description.</p>
+              </span> -->
+              <span ng-hide="personRoomDescription">
+                <p>You can see {{personName}} here.</p>
+              </span>
+
+              <p>> look at {{personName}}<br />
+                <span ng-show="personDescription">{{personDescription | punctuate}}</span><span ng-hide="personDescription">You see nothing special about {{personName}}.</span></p>
+            </span>
+
+          </form>
+
+        </div>
+        <div class="tab-pane" id="actions">
+          <form role="action">
+
+            <div class="form-group">
+              <label>Action command:</label>
+              <input class="form-control" type="text" ng-model="actionCommand" placeholder="Enter an action command here">
+              <p class="help-block">What should the player type for this action, e.g. "yawn"</p>
+            </div>
+
+            <div class="form-group">
+    <label>Action name:</label>
+              <input class="form-control" type="text" ng-model="actionName" placeholder="Enter an internal command name">
+              <p class="help-block">How should the game call this action, e.g. "yawning"</p>
+            </div>
+
+            <hr>
+
+            <span ng-show="actionName">
+              <p><kbd>{{actionName | capitalize }} is an action applying to nothing. Understand "{{actionCommand}}" as {{actionName}}.</kbd></p>
+              <p><kbd>Instead of {{actionName }}, say "You {{actionCommand}}."</kbd></p>
+
+              <h3>Unknown location</h3>
+
+              <p>> {{actionCommand}}</p>
+              <p>You {{actionCommand}}.</p>
+
+            </span>
+
+          </form>
+        </div>
+
       </div>
-      <div class="form-group">
-        <label>Description:</label>
-        <input class="form-control" type="text" ng-model="roomDescription" placeholder="Enter a room description here">
-        <p class="help-block">Text that appears when a player enters a room, for example "Your Great Auntie Vera's garden is a typical English garden with many sights, sounds, and smells. An old fountain is the centre piece of this garden."</p>
-      </div>
-
-      <hr>
-
-      <span ng-show="roomName">
-        <kbd>{{roomName}} is a room. <span ng-show="roomDescription.length">"{{roomDescription | punctuate}}"</span></kbd>
-      </span>
-
-      <span ng-show="roomName">
-      <h3>{{roomName}}</h3>
-      <span ng-show="roomDescription">
-        <p>{{roomDescription | punctuate}}</p>
-      </span>
-      <p>> </p>
-      </span>
-
-    </form>
-  </div>
-
-      <form role="person">
-        <div class="form-group">
-      <h2>A person</h2>
-
-      <div class="form-group">
-      <label>Name:</label>
-      <input class="form-control" type="text" ng-model="personName" placeholder="Enter the name of the person">
-    </div>
-
-<div class="form-group">
-      <label class="checkbox-inline">
-      <input type="radio" ng-model="personSex" value="male"> Male
-    </label>
-    <label class="radio-inline">
-      <input type="radio" ng-model="personSex" value="female"> Female
-    </label>
-  </div>
-
-<div class="form-group">
-      <label>Description:</label>
-      <input class="form-control" type="text" ng-model="personDescription" placeholder="Enter the description here">
-      <p class="help-block">Text that appears when the player looks at a person, for example "She is the sister of your grandmother and demands much respect from you."</p>
-    </div>
-
-      <div class="form-group">
-<label>Room description:</label>
-      <input class="form-control" type="text" ng-model="personRoomDescription" placeholder="Enter the room description here">
-      <p class="help-block">Text that appears when the player enters the room, for example "Darcy is standing here with a stern look on his face."</p>
-    </div>
-
-<div class="form-group">
-      <label for="personLocation">Location:</label>
-      <input class="form-control" type="text" ng-model="personLocation" placeholder="Enter the location of the person">
-    </div>
-
-      <hr>
-
-      <span ng-show="personName.length">
-    <kbd>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-hide="personLocation">{{personName}} is here.</span> <span ng-show="personRoomDescription">"{{personRoomDescription | punctuate}}"</span> <span ng-show="personDescription.length">The description is "{{personDescription | punctuate}}"</span>
-      </kbd>
-      </span>
-
-      <span ng-show="personName">
-      <h3><span ng-show="personLocation">{{personLocation}}</span><span ng-hide="personLocation">Unknown location</span></h3>
-      <span ng-show="personRoomDescription">
-        <p>{{personRoomDescription | punctuate}}</p>
-      </span>
-      <span ng-hide="personRoomDescription">
-        <p>An unknown location with an unknown description.</p>
-      </span>
-      <span ng-hide="personRoomDescription">
-        <p>You can see {{personName}} here.</p>
-      </span>
-
-      <p>> look at {{personName}}<br />
-      <span ng-show="personDescription">{{personDescription | punctuate}}</span><span ng-hide="personDescription">You see nothing special about {{personName}}.</span></p>
-      </span>
-
-    </form>
-  </div>
-
-      <form role="action">
-        <div class="form-group">
-
-      <h2>An action</h2>
-
-      <div class="form-group">
-        <label>Action command:</label>
-        <input class="form-control" type="text" ng-model="actionCommand" placeholder="Enter an action command here">
-        <p class="help-block">What should the player type for this action, e.g. "yawn"</p>
-      </div>
-      <div class="form-group">
-<label>Action name:</label>
-      <input class="form-control" type="text" ng-model="actionName" placeholder="Enter an internal command name">
-      <p class="help-block">How should the game call this action, e.g. "yawning"</p>
-    </div>
-
-      <hr>
-
-      <span ng-show="actionName">
-        <p><kbd>{{actionName | capitalize }} is an action applying to nothing. Understand "{{actionCommand}}" as {{actionName}}.</kbd></p>
-        <p><kbd>Instead of {{actionName }}, say "You {{actionCommand}}."</kbd></p>
-
-      <h3>Unknown location</h3>
-
-      <p>> {{actionCommand}}</p>
-      <p>You {{actionCommand}}.</p>
-
-      </span>
-
-</form>
-</div>
 
     </div>
 
@@ -161,5 +170,10 @@
         }
       });
     </script>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
