--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
       <div class="tab-content">
         <div class="tab-pane active" id="rooms">
 
+          <br />
+
+          <span ng-show="roomName">
+            <kbd>{{roomName}} is a room. <span ng-show="roomDescription.length">"{{roomDescription | punctuate}}"</span></kbd>
+
+            <br />
+            <br />
+          </span>
+
           <form role="room">
 
             <div class="form-group">
@@ -35,27 +44,34 @@
             <div class="form-group">
               <label>Description:</label>
               <input class="form-control" type="text" ng-model="roomDescription" placeholder="Enter a room description here">
-              <p class="help-block">Text that appears when a player enters a room, for example "Your Great Auntie Vera's garden is a typical English garden with many sights, sounds, and smells. An old fountain is the centre piece of this garden."</p>
+              <span class="help-block">Text that appears when a player enters a room, for example <i>"Your Great Auntie Vera's garden is a typical English garden with many sights, sounds, and smells. An old fountain is the centrepiece of this garden."</i></span>
             </div>
 
-            <hr>
-
             <span ng-show="roomName">
-
-              <kbd>{{roomName}} is a room. <span ng-show="roomDescription.length">"{{roomDescription | punctuate}}"</span></kbd>
-            </span>
-
-            <span ng-show="roomName">
+              <div class="well">
               <h3>{{roomName}}</h3>
               <span ng-show="roomDescription">
                 <p>{{roomDescription | punctuate}}</p>
               </span>
               <p>> </p>
+              </div>
             </span>
           </form>
         </div>
 
         <div class="tab-pane" id="people">
+
+          <br />
+
+          <span ng-show="personName.length">
+            <kbd>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-hide="personLocation">{{personName}} is here.</span> <span ng-show="personRoomDescription">"{{personRoomDescription | punctuate}}"</span> <span ng-show="personDescription.length">The description is "{{personDescription | punctuate}}"</span>
+            </kbd>
+
+            <br />
+            <br />
+          </span>
+
+
           <form role="person">
 
             <div class="form-group">
@@ -91,12 +107,8 @@
 
             <hr>
 
-            <span ng-show="personName.length">
-              <kbd>{{personName}} is a <span ng-show="personSex == 'male'">man</span><span ng-show="personSex == 'female'">woman</span><span ng-show="personLocation"> in {{personLocation}}</span>. <span ng-hide="personLocation">{{personName}} is here.</span> <span ng-show="personRoomDescription">"{{personRoomDescription | punctuate}}"</span> <span ng-show="personDescription.length">The description is "{{personDescription | punctuate}}"</span>
-              </kbd>
-            </span>
-
             <span ng-show="personName">
+              <div class="well">
               <h3><span ng-show="personLocation">{{personLocation}}</span><span ng-hide="personLocation">Unknown location</span></h3>
               <span ng-show="personRoomDescription">
                 <p>{{personRoomDescription | punctuate}}</p>
@@ -110,6 +122,7 @@
 
               <p>> look at {{personName}}<br />
                 <span ng-show="personDescription">{{personDescription | punctuate}}</span><span ng-hide="personDescription">You see nothing special about {{personName}}.</span></p>
+              </div>
             </span>
 
           </form>
@@ -133,6 +146,7 @@
             <hr>
 
             <span ng-show="actionName">
+              <div class="well">
               <p><kbd>{{actionName | capitalize }} is an action applying to nothing. Understand "{{actionCommand}}" as {{actionName}}.</kbd></p>
               <p><kbd>Instead of {{actionName }}, say "You {{actionCommand}}."</kbd></p>
 
@@ -141,6 +155,7 @@
               <p>> {{actionCommand}}</p>
               <p>You {{actionCommand}}.</p>
 
+            </div>
             </span>
 
           </form>
